(fix) : header use the new i18n transllation method

--- a/src/i18n/fr/common.json
+++ b/src/i18n/fr/common.json
@@ -1,4 +1,7 @@
 {
-    "nav.home": "Accueil",
-    "nav.about": "A propos"
+    "nav": {
+        "home": "Accueil",
+        "about": "A propos",
+        "blog": "Blog"
+    }
 }
