--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -1,4 +1,7 @@
 {
-    "nav.home": "Home",
-    "nav.about": "About"
+    "nav": {
+        "home": "Home",
+        "about": "About",
+        "blog": "Blog"
+    }
 }
