blog article page is now translated with i18n

--- a/src/i18n/en/blog.json
+++ b/src/i18n/en/blog.json
@@ -4,5 +4,8 @@
     "seo": {
         "title": "Blog - Portfolio 2025",
         "description": "I document my tech watch and freelance activity"
+    },
+    "article": {
+        "dateText": "Published"
     }
 }
