--- a/src/i18n/fr/about.json
+++ b/src/i18n/fr/about.json
@@ -1,8 +1,8 @@
 {
     "title": "A propos",
     "subTitle": "Actuellement à Grenoble",
-    "text1": "Ever since I was little, I've loved building things, whether with code or with my hands. When I encounter a problem, I want to find a solution. Today I put this desire to work for my clients by developing digital solutions that meet their needs.",
-    "text2": "When I'm not coding, I'm probably exploring the Alps on skis or on foot.",
+    "text1": "Depuis tout petit, j'aime construire des choses, que ce soit avec du code ou avec mes mains. Quand je rencontre un problème, je veux lui trouver une solution. Aujourd'hui je met cette envie au service de mes clients en développant des solutions digitales venant répondre à leurs besoins.",
+    "text2": "Quand je ne suis pas entrain de coder, je suis probablement entrain d'explorer les alpes à ski ou à pieds.",
     "imageAlt": "A propos de Victor Lebecq",
     "experience": {
         "title": "Expérience"
