--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -15,6 +15,7 @@
             "github": "Visit github profile",
             "theme": "Swap theme",
             "language": "Change language"
-        }
+        },
+        "arrowShortcut": "use"
     }
 }
