--- a/src/i18n/fr/common.json
+++ b/src/i18n/fr/common.json
@@ -15,6 +15,7 @@
             "github": "Voir mon github",
             "theme": "Changer de thème",
             "language": "Changer de langue"
-        }
+        },
+        "arrowShortcut": "utilise"
     }
 }
