(styles) : add the name of the socials in the socialLinks component

--- a/src/i18n/en/home.json
+++ b/src/i18n/en/home.json
@@ -6,7 +6,7 @@
         "title": "Projects"
     },
     "contact": {
-        "text": "Have a question? A project? Find me on my various networks or by"
+        "text": "Have a question? A project? I'm Available for collaborations ! Feel free to reach out for any inquiries. Find me on my various networks or by"
     },
     "seo": {
         "title": "Victor Lebecq・Web Developer in Chambéry and Grenoble",
