--- a/src/i18n/fr/home.json
+++ b/src/i18n/fr/home.json
@@ -6,7 +6,7 @@
         "title": "Projets"
     },
     "contact": {
-        "text": "Une question ? Un projet ? Trouvez moi sur mes différents réseaux ou par"
+        "text": "Vous avez une question ? Un projet ? Je suis disponible pour des collaborations ! N'hésitez pas à me contacter pour toute demande. Retrouvez-moi sur mes différents réseaux ou par"
     },
     "seo": {
         "title": "Victor Lebecq・Développeur web à Chambéry et Grenoble",
