(refactor/WorkEpxerience) : made a new version more minimalist

--- a/src/i18n/fr/404.json
+++ b/src/i18n/fr/404.json
@@ -4,6 +4,6 @@
     "text": "La page que vous essayer de trouver n'existe pas. Cette page est autant perdu que vous.",
     "link": "Retourner à l'accueil",
     "seo": {
-        "title": "404 - Page non trouvée"
+        "title": "404・Page non trouvée"
     }
 }
