(fix) : few changes before going prod

--- a/src/i18n/en/about.json
+++ b/src/i18n/en/about.json
@@ -15,6 +15,6 @@
     },
     "seo": {
         "title": "About・Victor Lebecq",
-        "description": "Web developer based in Chambéry who loves bringing impactful and sustainable projects to life."
+        "description": "Fullstack developer based in Chambéry who loves bringing impactful and sustainable projects to life."
     }
 }
