--- a/src/i18n/en/home.json
+++ b/src/i18n/en/home.json
@@ -1,6 +1,6 @@
 {
     "title": "Victor Lebecq",
-    "subTitle": "Web Developer",
+    "subTitle": "Fullstack Developer",
     "text": "25 year old freelance web developer based in Chambéry, I mainly work with React, Wordpress and AstroJS. I love breaking down problems and finding solutions to bring impactful and sustainable projects to life for my clients.",
     "project": {
         "title": "Projects"
@@ -9,7 +9,7 @@
         "text": "Have a question? A project? I'm Available for collaborations ! Feel free to reach out for any inquiries. Find me on my various networks or by"
     },
     "seo": {
-        "title": "Victor Lebecq・Web Developer in Chambéry and Grenoble",
-        "description": "Web developer based in Chambéry who loves bringing impactful and sustainable projects to life."
+        "title": "Victor Lebecq・Fullstack Developer in Chambéry and Grenoble",
+        "description": "Fullstack developer based in Chambéry who loves bringing impactful and sustainable projects to life."
     }
 }
