--- a/src/i18n/fr/home.json
+++ b/src/i18n/fr/home.json
@@ -1,7 +1,7 @@
 {
     "title": "Victor Lebecq",
     "subTitle": "Développeur Fullstack",
-    "text": "Développeur web de 25 ans basé à Chambéry, je travail principalement avec React, Wordpress et AstroJS. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.",
+    "text": "Développeur web de 25 ans basé à Chambéry, je travaille principalement avec React, Wordpress et AstroJS. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.",
     "project": {
         "title": "Projets"
     },
