(fix) : correction of some  spelling mistakes

--- a/src/i18n/fr/404.json
+++ b/src/i18n/fr/404.json
@@ -1,7 +1,7 @@
 {
     "title": "404",
     "subtitle": "Page non trouvée",
-    "text": "La page que vous essayer de trouver n'existe pas. Cette page est autant perdu que vous.",
+    "text": "La page que vous essayez de trouver n'existe pas. Cette page est aussi perdue que vous.",
     "link": "Retourner à l'accueil",
     "seo": {
         "title": "404・Page non trouvée"
