--- a/src/i18n/fr/about.json
+++ b/src/i18n/fr/about.json
@@ -9,12 +9,12 @@
     },
     "tech": {
         "title": "Tech",
-        "text1": "Actuellement je travail principalement avec Wordpress ou des frameworks javascript comme React ou recemment AstroJS dont j'apprecie tout particulièrement la DX (Developer Experience). Pour le styling, après avoir élaborer mes maquettes sur Figma, j'aime utiliser TailwindCSS pour sa simplicité et son efficacité.",
+        "text1": "Actuellement je travaille principalement avec Wordpress ou des frameworks javascript comme React ou recemment AstroJS dont j'apprécie tout particulièrement la DX (Developer Experience). Pour le styling, après avoir élaboré mes maquettes sur Figma, j'aime utiliser TailwindCSS pour sa simplicité et son efficacité.",
         "text2": "Avant chaque démarrage, je sélectionne la technologie qui répondra le plus efficacement à mes besoins, tout en minimisant (le plus possible) l'impact du projet sur notre belle planète.",
         "siteCarbon": "Ce site génère 0.08g de C02 par visite."
     },
     "seo": {
         "title": "A propos・Victor Lebecq",
-        "description": "Développeur web base à Chambéry qui aime donner vie à des projets impactant et durables."
+        "description": "Développeur web fullstack basé à Chambéry qui aime donner vie à des projets impactants et durables."
     }
 }
