--- a/src/i18n/fr/about.json
+++ b/src/i18n/fr/about.json
@@ -1,20 +1,20 @@
 {
-    "title": "A propos",
+    "title": "À propos",
     "subTitle": "Actuellement à Grenoble",
-    "text1": "Depuis tout petit, j'aime construire des choses, que ce soit avec du code ou avec mes mains. Quand je rencontre un problème, je veux lui trouver une solution. Aujourd'hui je met cette envie au service de mes clients en développant des solutions digitales venant répondre à leurs besoins.",
-    "text2": "Quand je ne suis pas entrain de coder, je suis probablement entrain d'explorer les alpes à ski ou à pieds.",
-    "imageAlt": "A propos de Victor Lebecq",
+    "text1": "Depuis tout petit, j'aime construire des choses, que ce soit avec du code ou avec mes mains. Quand je rencontre un problème, je veux lui trouver une solution. Aujourd'hui, je mets cette envie au service de mes clients en développant des solutions digitales venant répondre à leurs besoins.",
+    "text2": "Quand je ne suis pas en train de coder, je suis probablement en train d'explorer les Alpes à ski ou à pied.",
+    "imageAlt": "À propos de Victor Lebecq",
     "experience": {
         "title": "Expérience"
     },
     "tech": {
         "title": "Tech",
-        "text1": "Actuellement je travaille principalement avec Wordpress ou des frameworks javascript comme React ou recemment AstroJS dont j'apprécie tout particulièrement la DX (Developer Experience). Pour le styling, après avoir élaboré mes maquettes sur Figma, j'aime utiliser TailwindCSS pour sa simplicité et son efficacité.",
+        "text1": "Actuellement, je travaille principalement avec WordPress ou des frameworks JavaScript comme React ou récemment AstroJS, dont j'apprécie tout particulièrement la DX (Developer Experience). Pour le styling, après avoir élaboré mes maquettes sur Figma, j'aime utiliser TailwindCSS pour sa simplicité et son efficacité.",
         "text2": "Avant chaque démarrage, je sélectionne la technologie qui répondra le plus efficacement à mes besoins, tout en minimisant (le plus possible) l'impact du projet sur notre belle planète.",
-        "siteCarbon": "Ce site génère 0.08g de C02 par visite."
+        "siteCarbon": "Ce site génère 0,08g de CO₂ par visite."
     },
     "seo": {
-        "title": "A propos・Victor Lebecq",
+        "title": "À propos・Victor Lebecq",
         "description": "Développeur web fullstack basé à Chambéry qui aime donner vie à des projets impactants et durables."
     }
 }
