(feat/themeSwitcher) : add translation for the ariaLabel of the component

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -17,5 +17,8 @@
             "language": "Change language"
         },
         "arrowShortcut": "use"
+    },
+    "themeSwitcher": {
+        "ariaLabel": "Change theme"
     }
 }
