--- a/src/i18n/fr/common.json
+++ b/src/i18n/fr/common.json
@@ -17,5 +17,8 @@
             "language": "Changer de langue"
         },
         "arrowShortcut": "utilise"
+    },
+    "themeSwitcher": {
+        "ariaLabel": "Changer de thème"
     }
 }
