(fix/blog) : fix the meta title for google results on the page

--- a/src/i18n/en/blog.json
+++ b/src/i18n/en/blog.json
@@ -2,7 +2,7 @@
     "title": "Blog",
     "subTitle": "I document my tech watch and freelance activity",
     "seo": {
-        "title": "Blog - Portfolio 2025",
+        "title": "Blog",
         "description": "I document my tech watch and freelance activity"
     },
     "article": {
