--- a/src/i18n/fr/blog.json
+++ b/src/i18n/fr/blog.json
@@ -2,7 +2,7 @@
     "title": "Blog",
     "subTitle": "Je documente ma veille et mon activité de freelance",
     "seo": {
-        "title": "Blog - Portfolio 2025",
+        "title": "Blog",
         "description": "Je documente ma veille et mon activité de freelance"
     },
     "article": {
